welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: not found: value num
    if (num(i)==9){
        ^